--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="titel">Change it up</title>
     <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1 id="demo"></h1>
     <button onclick="myFunction()">Try it</button>
+    
     
 </body>
 </html>
